# iced-node-editor

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: page.yml
examples/basic/: Cargo.toml  README.md  index.html
examples/basic/src/: main.rs
iced_node_editor/: Cargo.toml
iced_node_editor/src/: connection.rs  graph_container.rs  lib.rs  matrix.rs  mesh_renderer.rs  node.rs  node_element.rs
iced_node_editor/src/styles/: connection.rs  graph_container.rs  mod.rs  node.rs
