[package]
name = "basic_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = "0.10.0"
iced_node_editor = { path = "../../iced_node_editor"}

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = "0.3.64"
